Testando carga de imagens

--- a/exercicios/ex003/index.html
+++ b/exercicios/ex003/index.html
@@ -6,7 +6,7 @@
     <title>Teste com imagens</title>
 </head>
 <body>
-    <h1>Testando carga e imagens</h1>
+    <h1>Testando carga de imagens</h1>
     <p>Abaixo você vai ver uma imagem que está na pasta.</p>
     <img src="logo-html-200.png" alt="Logo HTML5, fonte: https://commons.wikimedia.org/wiki/File:HTML5_oval_logo.png">
     <p>Podemos também caregar imagens qe estão em subpastas.</p>
